# volt

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  format.py  gcc-toolchain.cmake  run.py  volt
.cache/clangd/index/: allocator.c.96219AB09E183DA2.idx  allocator.h.9A84346941139D9A.idx  array.h.48F73D1B01C30F2A.idx  array.h.9D124BA7FCF62777.idx  defines.h.C88C0884D02807D0.idx  error.h.E40BE86C99A62650.idx  fmt.c.F5A3CC098C303D01.idx  fmt.h.F54DBA997584AB8B.idx  lexer.c.D8105CB6B27BD744.idx  lexer.cpp.9D34D31BDB44C876.idx  main.c.F0952A6C6043F8AD.idx  main.cpp.643046A9B28B84FD.idx  parser.c.1C60A802862BCE0B.idx  parser.cpp.7E6B68CA68920791.idx  pch.cpp.E7DF5B6FA394F1BB.idx  pch.h.E88EB0EE70A29230.idx  pch.hpp.8233D313C247821E.idx  pch.hpp.9BB56E3237C7CE49.idx  types.h.0BD28295A0C4AF44.idx  types.h.AB79A731D206A565.idx  types.hpp.6A1D21F6F0CC0313.idx  vector.c.8E2044B9189D0D7D.idx  vector.h.6AB93FE79C8054D8.idx  volt.c.69735BB5A66A4604.idx  volt.cpp.46F6F373B6AEDCE9.idx  volt.h.EF2607F215DFB18F.idx  volt.hpp.3B8A1AB963C7B1FC.idx
include/: pch.h  pch.hpp
include/lexer/: lexer.h  token.h  token_type.h
include/parser/: expression.h  parser.h
include/semantic/: analyzer.h
include/util/: array.h  defines.h  fmt.h  types.h  types.hpp
include/util/memory/: allocator.h
include/util/types/: array.h  types.h  vector.h
include/volt/: error.h  error_handler.hpp  error_types.hpp  volt.h  volt.hpp
src/: main.c  main.cpp
src/lexer/: lexer.c  token.c
src/parser/: expression.c  parser.c
src/semantic/: analyzer.c
src/util/: fmt.c
src/util/memory/: allocator.c
src/util/types/: vector.c
src/volt/: error.c  volt.c  volt.cpp
test/: test.volt
